--- a/Fitnessing/StoryBoards/Base.lproj/LaunchScreen.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/LaunchScreen.storyboard
@@ -15,15 +15,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="TzA-Fq-xED">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="TzA-Fq-xED">
+                                <rect key="frame" x="0.0" y="-10" width="414" height="916"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="TzA-Fq-xED" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="EPU-uu-uUW"/>
+                            <constraint firstAttribute="bottom" secondItem="TzA-Fq-xED" secondAttribute="bottom" constant="-10" id="5xc-6b-IlZ"/>
+                            <constraint firstItem="TzA-Fq-xED" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aAx-g1-1V0"/>
+                            <constraint firstItem="TzA-Fq-xED" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aaK-rF-kmI"/>
                             <constraint firstItem="TzA-Fq-xED" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="c0N-69-8WK"/>
                             <constraint firstItem="TzA-Fq-xED" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="gEQ-3u-A3X"/>
+                            <constraint firstItem="TzA-Fq-xED" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-10" id="r3i-MK-Tx9"/>
                             <constraint firstItem="TzA-Fq-xED" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wcg-Wu-wt3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
