--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -372,40 +372,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="15G-30-QXk">
-                                <rect key="frame" x="20" y="478" width="374" height="304"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3m6-VB-ZrW">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="822"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="365" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="15G-30-QXk" customClass="WorkoutTableView" customModule="Fitnessing" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="496" width="374" height="304"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExerciseTableViewCell" id="jKL-e7-tma" customClass="ExerciseTableViewCell" customModule="Fitnessing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="374" height="365"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jKL-e7-tma" id="bNY-YT-Iub">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="365"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="304" id="WNu-Nk-ifr"/>
+                                    <constraint firstItem="15G-30-QXk" firstAttribute="centerX" secondItem="3m6-VB-ZrW" secondAttribute="centerX" id="2ab-xG-dOb"/>
+                                    <constraint firstItem="15G-30-QXk" firstAttribute="bottom" secondItem="3m6-VB-ZrW" secondAttribute="bottomMargin" id="May-0U-dJt"/>
+                                    <constraint firstAttribute="trailing" secondItem="15G-30-QXk" secondAttribute="trailing" constant="20" id="cx7-ms-b0K"/>
+                                    <constraint firstItem="15G-30-QXk" firstAttribute="leading" secondItem="3m6-VB-ZrW" secondAttribute="leading" constant="20" id="jNW-lG-6Qd"/>
                                 </constraints>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExerciseTableViewCell" rowHeight="320" id="jKL-e7-tma" customClass="ExerciseTableViewCell" customModule="Fitnessing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="320"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jKL-e7-tma" id="bNY-YT-Iub">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="320"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                <viewLayoutGuide key="contentLayoutGuide" id="81c-Dg-caE"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="s1E-jR-qwj"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.98310596446700504" green="0.98310596446700504" blue="0.98310596446700504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="15G-30-QXk" firstAttribute="leading" secondItem="aSc-8O-D3Q" secondAttribute="leading" constant="20" id="HXh-l3-OoX"/>
-                            <constraint firstAttribute="bottom" secondItem="15G-30-QXk" secondAttribute="bottom" constant="60" id="pn9-Cs-GcB"/>
-                            <constraint firstItem="aSc-8O-D3Q" firstAttribute="trailing" secondItem="15G-30-QXk" secondAttribute="trailing" constant="20" id="uzH-n4-Bue"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aSc-8O-D3Q"/>
                     </view>
                     <navigationItem key="navigationItem" id="oeR-gj-TR7"/>
                     <connections>
+                        <outlet property="scrollView" destination="3m6-VB-ZrW" id="bLU-z9-0K4"/>
                         <outlet property="tableView" destination="15G-30-QXk" id="j2O-QX-hZh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6dh-PJ-pqB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2010" y="362"/>
+            <point key="canvasLocation" x="2008.6956521739132" y="361.60714285714283"/>
         </scene>
         <!--Workout In Progress View Controller-->
         <scene sceneID="GnS-ex-ONk">
